Fix resume link for no popups on mobile

--- a/style.css
+++ b/style.css
@@ -206,6 +206,15 @@ nav{
     text-decoration-color: aquamarine;
     text-decoration-thickness: 3px;
 }
+
+.resume{
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    padding-right: 10px;
+}
+
+
 /*##############
 LOADING LOGO
 #############*/
